# reactor-api-algebra

./: CMakeLists.txt  README.md
api/include/reactor/algebra/: Transform2d.hpp  Vector2d.hpp
